# terraform-workshop

./: .pre-commit-config.yaml  .tflint.hcl  LICENSE  README.md  pyproject.toml
01_hello_world/: README.md  main.tf
02_providers/: .terraform.lock.hcl  README.md  main.tf  root.tf  versions.tf
03_backend/: README.md  main.tf  root.tf
04_functions/: README.md  main.tf  root.tf  terraform.tfvars  variables.tf
05_modules/: .terraform.lock.hcl  README.md  eks.tf  vpc.tf
06_workspaces/: earth.yaml  main.tf  mars.yaml
